[package]
name = "transponster"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow="1.0"
csv="1.1"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
structopt = { version = "0.3", default-features = false }
strum = { version = "0.26", features = ["derive"] }
indexmap = "2.5.0"
